# russian-roulette

./: CHANGELOG.md  README.md  russian-roulette.cabal  russian-roullete.cabal
app/: Main.hs
src/: Server.hs
src/Http/: Application.hs  Http.hs  Request.hs  Response.hs
static/: index.html  script.js  style.css
