cabal-version:      2.4
name:               russian-roullete
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Khanh Hua
maintainer:         giakhanh2487@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Server
      , Http.Http
      , Http.Request
      , Http.Response

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
      , network ==3.1.2.7
      , http-types ==0.12.3
      , bytestring ==0.10.12.0
      , http2 ==2.0.5
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable russian-roullete
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        russian-roullete

    hs-source-dirs:   app
    default-language: Haskell2010
